[FEATURE] new feature delete, update, get, and upload avatar customer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.datasource.continue-on-error=true
 app.sumbermakmur.app-name = SumberMakmur
 app.sumbermakmur.jwt-secret = ${JWT_SECRET:Sumb3rM4kmur}
 app.sumbermakmur.jwt-expirationInSecond = ${JWT_EXPIRATION_IN_MINUTE:300}
+
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=10MB
