[FEATURE] new feature api product and category

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,6 @@ spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/sum
 spring.datasource.username=${DB_USERNAME:postgres}
 spring.datasource.password=${DB_PASSWORD:postgres}
 
-
 spring.datasource.initialization-mode=always
 spring.datasource.initialize=true
 spring.datasource.schema=classpath:/schema.sql
@@ -17,3 +16,4 @@ app.sumbermakmur.jwt-expirationInSecond = ${JWT_EXPIRATION_IN_MINUTE:300}
 
 spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=10MB
+app.sumbermakmur.directory-image-path = ${DIRECTORY_PATH:src/main/uploads/}
